DIH updates for Solr 9 compatibility