@@ -114,7 +114,7 @@ public class EntityProcessorWrapper extends EntityProcessor {
         @SuppressWarnings({"rawtypes"})
         Class clazz = DocBuilder.loadClass(trans, context.getSolrCore());
         if (Transformer.class.isAssignableFrom(clazz)) {
-          transformers.add((Transformer) clazz.newInstance());
+          transformers.add((Transformer) clazz.getDeclaredConstructor().newInstance());
         } else {
           Method meth = clazz.getMethod(TRANSFORM_ROW, Map.class);
           transformers.add(new ReflectionTransformer(meth, clazz, trans));
@@ -167,7 +167,7 @@ public class EntityProcessorWrapper extends EntityProcessor {
       this.meth = meth;
       this.clazz = clazz;
       this.trans = trans;
-      o = clazz.newInstance();
+      o = clazz.getDeclaredConstructor().newInstance();
     }
 
     @Override
